# Queen_Mama

./: .gitignore  CLEANUP_CHECKLIST.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  FIX_VERCEL_STAGING.md  LAUNCH_AUDIT.md  README.md  STATUS.md  install.ps1  setup_xcode_project.sh
.claude/: settings.local.json
.github/workflows/: README.md  build-macos.yml  deploy-web.yml
QueenMama/: Info.plist  QueenMama.entitlements  QueenMamaApp.swift
QueenMama.xcodeproj/: project.pbxproj
QueenMama/Models/: AIResponse.swift  Mode.swift  Session.swift
QueenMama/Services/: AIService.swift  (+10 more)
certificate/: developerID_application.cer
landing/: .env.example  .env.production.example  .env.staging.example  .gitignore  README.md  amplify.yml  check-subscription.js  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
mac_app/: Info.plist  QueenMama.entitlements  QueenMamaApp.swift  README.md
scripts/: release.sh  sentry-issues.sh
web_app/: .env.example  .gitignore  README.md  index.html  overlay.html  package.json  tailwind.config.js  vite.config.ts
web_app/src-tauri/: Cargo.toml  tauri.conf.json
web_app/src-tauri/capabilities/: default.json
web_app/src-tauri/src/: lib.rs  main.rs  shortcuts.rs  tray.rs  window.rs
win_app/: QueenMama.sln  README.md  launch.ps1
win_app_2/: .eslintrc.cjs  .gitignore  TESTING.md  drizzle.config.ts  electron-builder.yml  electron.vite.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
(+440 files in other folders)
